Update Phone Intels project
